Implementing Task Scheduler Wrapper
Changed from using registry keys to run at startup to a scheduled task
system.

--- a/APOD to Desktop/APOD to Desktop.csproj
+++ b/APOD to Desktop/APOD to Desktop.csproj
@@ -71,6 +71,9 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Win32.TaskScheduler">
+      <HintPath>..\packages\TaskScheduler.2.0.3\lib\2\Microsoft.Win32.TaskScheduler.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -102,6 +105,7 @@
   <ItemGroup>
     <None Include="APOD to Desktop_TemporaryKey.pfx" />
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
