Change file locations to user/appdata/local subdirectory.
Move from writing txt and jpg files from the application running
directory to the "C:\Users\USER\AppData\Local\APOD to Desktop" directory
to attempt to resolve VirtualStore usage issues.

--- a/APOD to Desktop/APOD to Desktop.csproj
+++ b/APOD to Desktop/APOD to Desktop.csproj
@@ -70,6 +70,7 @@
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="Microsoft.Win32.TaskScheduler">
       <HintPath>..\packages\TaskScheduler.2.0.3\lib\2\Microsoft.Win32.TaskScheduler.dll</HintPath>
