Adds functionality to Settings Form
Settings form now loads values from the application settings and sets
controls to display appropriate values.  OK / Cancel / Apply button
functionality added and settings are properly saved or discarded.

--- a/APOD to Desktop/App.config
+++ b/APOD to Desktop/App.config
@@ -10,14 +10,17 @@
   </startup>
   <userSettings>
     <APOD_to_Desktop.Properties.Settings>
-      <setting name="GetWallpaper" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="RunAtStartup" serializeAs="String">
+      <setting name="AtLogonGetAPOD" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Style" serializeAs="String">
         <value>Fill</value>
+      </setting>
+      <setting name="MaxUsage" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="AtLogonUpdateApplication" serializeAs="String">
+        <value>False</value>
       </setting>
     </APOD_to_Desktop.Properties.Settings>
   </userSettings>
