Adds function StorageManager
Adds functionality to delete the oldest files in a directory one by one
if over the Max Usage limit.  Minor adjustments to streamline access to
the %AppData%\Local\APOD to Desktop\ folder and variable type changes
from Int or Long to Double in some cases.

--- a/APOD to Desktop/Properties/Settings.settings
+++ b/APOD to Desktop/Properties/Settings.settings
@@ -8,11 +8,14 @@
     <Setting Name="Style" Type="System.String" Scope="User">
       <Value Profile="(Default)">Fill</Value>
     </Setting>
-    <Setting Name="MaxUsage" Type="System.Int32" Scope="User">
+    <Setting Name="MaxUsage" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="AtLogonUpdateApplication" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="AppFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
