--- a/APOD to Desktop/App.config
+++ b/APOD to Desktop/App.config
@@ -22,6 +22,9 @@
       <setting name="AtLogonUpdateApplication" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="AppFolder" serializeAs="String">
+        <value />
+      </setting>
     </APOD_to_Desktop.Properties.Settings>
   </userSettings>
 </configuration>
