Revises information and app folder location.
Modifies app folder setting to be "%AppData%/APOD_to_Desktop/Images/"

--- a/APOD to Desktop/App.config
+++ b/APOD to Desktop/App.config
@@ -11,7 +11,7 @@
   <userSettings>
     <APOD_to_Desktop.Properties.Settings>
       <setting name="AtLogonGetAPOD" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="Style" serializeAs="String">
         <value>Fill</value>
