Partially replaces "Check for program updates" with a Context Menu option.
WIP updated files to replace the currently non-functional "check for
updates to the application" with a new feature, adding APOD to the
right-click Desktop context menu.

--- a/APOD to Desktop/APOD to Desktop.csproj
+++ b/APOD to Desktop/APOD to Desktop.csproj
@@ -116,6 +116,9 @@
   <ItemGroup>
     <None Include="APOD to Desktop_TemporaryKey.pfx" />
     <None Include="App.config" />
+    <None Include="Astronomy Picture of the Day.url">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
