--- a/APOD to Desktop/App.config
+++ b/APOD to Desktop/App.config
@@ -19,7 +19,7 @@
       <setting name="MaxUsage" serializeAs="String">
         <value>0</value>
       </setting>
-      <setting name="AtLogonUpdateApplication" serializeAs="String">
+      <setting name="ContextMenu" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="AppFolder" serializeAs="String">
