--- a/APOD to Desktop/APOD to Desktop.csproj
+++ b/APOD to Desktop/APOD to Desktop.csproj
@@ -60,7 +60,7 @@
     </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
